<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/CellAnaly"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/CellBGAnaly"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="5dp"
        android:background="#0000"
        android:scaleType="fitXY"
        android:contentDescription="@string/Empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/editbox_background"
        app:tint="@color/main_color" />

    <ImageView
        android:id="@+id/CellLightBGAnaly"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="5dp"
        android:background="#0000"
        android:scaleType="fitXY"
        android:contentDescription="@string/Empty"
        app:layout_constraintBottom_toBottomOf="@+id/CellBGAnaly"
        app:layout_constraintEnd_toEndOf="@+id/CellBGAnaly"
        app:layout_constraintStart_toEndOf="@+id/CategoryColor"
        app:layout_constraintTop_toTopOf="@+id/CellBGAnaly"
        app:srcCompat="@android:drawable/editbox_background"
        app:tint="@color/secondary_color" />

    <ImageView
        android:id="@+id/cellLightBGAnaly2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="#0000"
        android:scaleType="fitXY"
        android:contentDescription="@string/Empty"
        app:layout_constraintBottom_toBottomOf="@+id/CellBGAnaly"
        app:layout_constraintEnd_toEndOf="@+id/CellBGAnaly"
        app:layout_constraintStart_toEndOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toTopOf="@+id/CellBGAnaly"
        app:srcCompat="@android:drawable/editbox_background"
        app:tint="@color/secondary_color" />

    <Button
        android:id="@+id/CategoryColor"
        android:layout_width="18dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/Maintenance"
        android:clickable="false"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@+id/CellBGAnaly"
        app:layout_constraintTop_toTopOf="@+id/CellBGAnaly"
        app:strokeColor="@color/text"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/ProfitLoss"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/Maintenance"
        android:clickable="false"
        android:visibility="invisible"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/cellLightBGAnaly2"
        app:layout_constraintEnd_toEndOf="@+id/cellLightBGAnaly2"
        app:layout_constraintStart_toEndOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toTopOf="@+id/DayText"
        app:strokeColor="@color/text"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/CategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:background="#0000"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/Maintenance"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toTopOf="@+id/CellLightBGAnaly" />

    <TextView
        android:id="@+id/DayText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#0000"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/Day"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/cellLightBGAnaly2"
        app:layout_constraintStart_toEndOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toTopOf="@+id/cellLightBGAnaly2" />

    <TextView
        android:id="@+id/ExpenseDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#0000"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/Day_Placeholder"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cellLightBGAnaly2"
        app:layout_constraintEnd_toEndOf="@+id/cellLightBGAnaly2"
        app:layout_constraintStart_toEndOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toBottomOf="@+id/DayText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/EntryAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="#0000"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/AmountColon"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toBottomOf="@+id/CategoryText" />

    <TextView
        android:id="@+id/EntryTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="3dp"
        android:background="#0000"
        android:fontFamily="@font/oxygen"
        android:text="@string/Time"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/CellLightBGAnaly"
        app:layout_constraintStart_toStartOf="@+id/CellLightBGAnaly"
        app:layout_constraintTop_toBottomOf="@+id/EntryAmountText" />

    <TextView
        android:id="@+id/EntryTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="3dp"
        android:background="#0000"
        android:fontFamily="@font/oxygen"
        android:text="@string/Time_Placeholder"
        android:textAllCaps="true"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/CellLightBGAnaly"
        app:layout_constraintStart_toEndOf="@+id/EntryTimeText"
        app:layout_constraintTop_toBottomOf="@+id/EntryAmount" />

    <TextView
        android:id="@+id/EntryAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:background="#0000"
        android:fontFamily="@font/oxygen_bold"
        android:text="@string/PlaceholderMoney"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/EntryAmountText"
        app:layout_constraintTop_toBottomOf="@+id/CategoryText" />
</androidx.constraintlayout.widget.ConstraintLayout>